<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filtered_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.renhanfei.phonelocusdetermination.FilteredItemsActivity">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="  "-->
        <!--android:id="@+id/debugview"/>-->

    <ListView
        android:id="@+id/filtered_items_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_btn"
            android:onClick="onClick_back"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plot_btn"
            android:onClick="onClick_plot"/>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onClick_UpdateFiltering"
        android:text="@string/update_btn" />

</LinearLayout>
